--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "choo": "^6.11.0"
+    "choo": "^6.11.0",
+    "empty-element": "^1.0.0"
   }
 }
